# rootedrevival

./: .copilot-instructions.md  .gitignore  Dockerfile  IMPORTANT.md  QUICKSTART.md  README.md  ROTATING_ASSET_IDEAS.md  TRINKETS_SETUP.md  about.html  admin.html  browse.html  deploy.sh  docker-compose.yml  download.html  help.html  index.html  login.html  products.html  profile.html  register.html  search.html  services.html  trinkets.html  upload.html  user.html  view.html
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_backup/deprecated-configs/: grabnet-template.service
_backup/old-root-html/: browse.html  help.html  index.html  profile.html  register.html  upload.html  user.html
api/: apikeys
deploy/: cloudflared.service  grab-gateway.service  grabnet-relay.service  install.sh  nginx.conf  revival-server.service  scholar.service
desktop/: README.md  main.js  package.json  preload.js
desktop-tauri/: README.md  package.json  tauri.conf.json
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: commands.rs  main.rs  state.rs
desktop-tauri/ui/: app.js  index.html  styles.css
desktop/renderer/: launcher.html  revival.html
grab/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
grab/src/: lib.rs  types.rs
grab/src/content/: mod.rs  uploads.rs
grab/src/crypto/: hash.rs  merkle.rs  mod.rs  signing.rs
grab/src/erasure/: codec.rs  mod.rs  shards.rs
grab/src/gateway/: mod.rs  server.rs
grab/src/network/: behaviour.rs  bootstrap.rs  health.rs  mod.rs  node.rs  protocol.rs  replication.rs
grab/src/publisher/: bundle.rs  mod.rs
grab/src/storage/: bundles.rs  chunks.rs  keys.rs  mod.rs
grabnet-gui/: README.md  main.js  package.json  preload.js
grabnet-gui/renderer/: app.js  index.html
pinning-service/: .env.example  grabnet-pinning.service  grabnet-server.js  package.json  pinning.service  setup.sh
relay/: README.md  package.json  ws-relay.js
scholar/: Cargo.toml  LICENSE  README.md  WHY.md  openapi.yaml
scholar/src/: app.rs  email.rs  grabnet_client.rs  main.rs  middleware.rs  models.rs  moderation.rs
scholar/src/db/: files.rs  mod.rs  reviews.rs  schema.rs  users.rs
scholar/src/handlers/: admin.rs  auth.rs  files.rs  mod.rs  moderation.rs  reviews.rs  static_files.rs
scholar/static/js/: encryption.js  keys.js
scholar/tests/: integration_tests.rs  unit_tests.rs
server/: Dockerfile  README.md  add-e2e-columns.js  add-e2e-file-columns.js  docker-compose.yml  package.json  scholar.service  setup.sh
server/public/: index.html
server/public/css/: app-enhanced.css  app.css  content-types.css  themes.css
server/public/js/: app.js  content-templates.js  profile.js  themes.js
server/src/: admin-routes.js  assistant.js  call-signaling.js  citations.js  cms-routes.js  config.js  crypto.js  grab-routes.js  grab.js  http.js  index.js  routes.js  shop-routes.js  webauthn.js
server/src/db/: cms.js  collections.js  files.js  index.js  init.js  migrate-add-customization.js  migrate-add-node-tracking.js  moderation.js  papers.js  reviews.js  schema-extended.sql  schema-grabnet.sql  schema.sql  seed-admin.js  shop.js  users.js
site/: about.html  admin.html  browse.html  download.html  grab.html  help.html  index.html  login.html  products.html  profile.html  register.html  scholar.html  search.html  services.html  trinkets.html  upload.html  user.html  view.html
site/content/testuser2/: energy_paper-1770016300799.txt  energy_paper-1770016300799.txt.meta.json  energy_paper-1770016308167.txt.meta.json  testpaper-1770015691807.txt  testpaper-1770015691807.txt.meta.json
site/static/js/: calls.js  e2e.js  grabnet-api.js  grabnet-p2p.js  site-nav.js
static/js/: chat-widget.js  e2e.js  grabnet-p2p.js
tor/: README.md  setup.sh  torrc.conf
