[package]
name = "rooted-revival-desktop"
version = "0.1.0"
description = "Rooted Revival Desktop Application"
authors = ["Rooted Revival Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "rooted_revival_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
dirs = "5"
which = "6"
anyhow = "1"
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
